# ZHMChaosMod

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  effect_suggestion.yml  feature_suggestion.yml
.github/workflows/: build.yml  check-format.yml
cmake/: gen-build-info.cmake
docs/: DEV_CONCEPTS.md  DEV_EFFECTS.md  DEV_NOTATION.md  DEV_SETUP.md
src/: BuildInfo.h  ChaosMod.cpp  ChaosMod.h  ChaosModDevTools.cpp  ChaosModSelection.cpp  ChaosModUI.cpp  EffectEnableTemplates.cpp  EffectRegistry.h  Registry.cpp  Registry.h  ZConfigurationAccessor.cpp  ZConfigurationAccessor.h  ZEffectConfigurationAccessor.cpp  ZEffectConfigurationAccessor.h
src/Effects/: IChaosEffect.cpp  IChaosEffect.h  ZRatTestEffect.cpp  ZRatTestEffect.h
src/Effects/Actors/: ZActorDanceGroupEffect.cpp  ZActorDanceGroupEffect.h  ZActorToWineEffect.cpp  ZActorToWineEffect.h  ZActorsDanceEffect.cpp  ZActorsDanceEffect.h  ZActorsFireRandomlyEffect.cpp  ZActorsFireRandomlyEffect.h  ZActorsFollowPlayerEffect.cpp  ZActorsFollowPlayerEffect.h  ZExplodeActorsOnTouchEffect.cpp  ZExplodeActorsOnTouchEffect.h  ZExplodeNearbyActorsEffect.cpp  ZExplodeNearbyActorsEffect.h  ZExplodeRandomActorEffect.cpp  ZExplodeRandomActorEffect.h  ZExplosiveKnockoutEffect.cpp  ZExplosiveKnockoutEffect.h  ZInvisibleActorsEffect.cpp  ZInvisibleActorsEffect.h  ZNearbyActorSpeakEffect.cpp  ZNearbyActorSpeakEffect.h  ZSwapTargetsEffect.cpp  ZSwapTargetsEffect.h
src/Effects/Base/: ZActorFollowPlayerHelperEffectBase.h  ZActorSpawnerEffectBase.cpp  ZActorSpawnerEffectBase.h  ZActorWeaponCustomControlEffectBase.h  ZActorWellbeingChangeEffectBase.cpp  ZActorWellbeingChangeEffectBase.h  ZCameraEffectBase.cpp  ZCameraEffectBase.h  ZCameraFOVEffectBase.cpp  ZCameraFOVEffectBase.h  ZCompanionModDepedentEffectBase.cpp  ZCompanionModDepedentEffectBase.h  ZCompanionModDependentEffectBase.h  ZDoorsEffectBase.cpp  ZDoorsEffectBase.h  ZExplosionEffectBase.cpp  ZExplosionEffectBase.h  ZGravityModifierEffectBase.cpp  ZGravityModifierEffectBase.h  ZInterpolatingEffectBase.cpp  ZInterpolatingEffectBase.h  ZPlayerAICrippleEffectBase.cpp  ZPlayerAICrippleEffectBase.h  ZPlayerCrippleBoxEffectBase.cpp  ZPlayerCrippleBoxEffectBase.h  ZPlayerRagdollEffectBase.cpp  ZPlayerRagdollEffectBase.h  ZPoisonAOEDamageEffectBase.cpp  ZPoisonAOEDamageEffectBase.h  ZRenderPostfilterEffectBase.cpp  ZRenderPostfilterEffectBase.h  ZRepositoryPatchEffectBase.cpp  ZRepositoryPatchEffectBase.h  ZSingleTimeEffectBase.h  ZSoundFXEffectBase.cpp  ZSoundFXEffectBase.h  ZSpawnRepositoryItemEffectBase.cpp  ZSpawnRepositoryItemEffectBase.h  ZSpeakEntityEffectBase.cpp  ZSpeakEntityEffectBase.h
src/Effects/Camera/: SimpleCameraFOVEffects.cpp  SimpleCameraFOVEffects.h  ZBlurryVisionEffect.cpp  ZBlurryVisionEffect.h  ZCameraFOVEffects.h  ZCameraWaveFOVEffect.cpp  ZCameraWaveFOVEffect.h  ZFirstPersonCameraEffect.cpp  ZFirstPersonCameraEffect.h  ZFlipCameraEffect.cpp  ZFlipCameraEffect.h  ZFollowingActorCameraEffect.cpp  ZFollowingActorCameraEffect.h  ZHeavyFogEffect.cpp  ZHeavyFogEffect.h  ZLaggyCameraEffect.cpp  ZLaggyCameraEffect.h  ZLiveReactionCamEffect.cpp  ZLiveReactionCamEffect.h  ZOverheadCameraEffect.cpp  ZOverheadCameraEffect.h  ZRenderPostfilerEffect.cpp  ZRenderPostfilerEffect.h  ZScreenColorTintEffect.cpp  ZScreenColorTintEffect.h  ZWobblyVisionEffect.cpp  ZWobblyVisionEffect.h
src/Effects/Dbg/: ZActLibraryDbgEffect.cpp  ZActLibraryDbgEffect.h  ZActorSpawnerDbgEffect.cpp  ZActorSpawnerDbgEffect.h  ZPlayerCrippleBoxDbgEffect.cpp  ZPlayerCrippleBoxDbgEffect.h  ZWeaponUtilsDbgEffect.cpp  ZWeaponUtilsDbgEffect.h
src/Effects/Meta/: ZFakeConnectionLostEffect.cpp  ZFakeConnectionLostEffect.h  ZFakeCrashEffect.cpp  ZFakeCrashEffect.h  ZLagEffect.cpp  ZLagEffect.h
src/Effects/Misc/: ZCameraViewBasedGravityEffect.cpp  ZCameraViewBasedGravityEffect.h  ZFireworksEffect.cpp  ZFireworksEffect.h  ZRGBLightsEffect.cpp  ZRGBLightsEffect.h  ZSimpleGravityModifierEffect.cpp  ZSimpleGravityModifierEffect.h  ZSlowTimeScaleEffect.cpp  ZSlowTimeScaleEffect.h  ZVelocityBasedTimeScaleEffect.cpp  ZVelocityBasedTimeScaleEffect.h
src/Entity/: EntityIds.h
src/Helpers/: ActorUtils.cpp  ActorUtils.h  CameraUtils.cpp  CameraUtils.h  CompanionMod.cpp  CompanionMod.h  EntityBinding.h  EntityUtils.cpp  EntityUtils.h  EntityWrapper.h  HookingHelpers.h  ImGuiExtras.h  InputActionNames.h  Math.cpp  Math.h  PlayerUtils.cpp  PlayerUtils.h  Utils.cpp  Utils.h  ZBackgroundWorker.cpp  ZBackgroundWorker.h  ZChaosEffectProxy.h  ZEntityResourceSpawner.cpp  ZEntityResourceSpawner.h  ZPerfCounter.cpp  ZPerfCounter.h  ZQuickEntityLoader.cpp  ZResourceProvider.cpp  ZResourceProvider.h  ZTemplateEntitySpawner.cpp  ZTemplateEntitySpawner.h  ZTimer.cpp  ZTimer.h  ZVelocityTracker.cpp  ZVelocityTracker.h
src/Twitch/: TwitchIntegration.h  TwitchVoting.cpp
src/Unlockers/: IUnlocker.h  ZFixCameraUnlocker.cpp  ZFixCameraUnlocker.h  ZFixPlayerPositionUnlocker.cpp  ZFixPlayerPositionUnlocker.h
src/Voting/: IVotingIntegration.cpp  IVotingIntegration.h
tools/: EntityBindingCodegen.html  ZHM5CrippleBox_flags.md
tools/EntityBindingCodegen/: package-lock.json  package.json
(+200 files in other folders)
